--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.38",
     "expo-status-bar": "~2.0.1",
