--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.1",
-    "@react-navigation/stack": "^7.2.1",
+    "@react-navigation/stack": "^7.2.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
@@ -30,7 +31,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
@@ -41,6 +42,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
+    "nodemon": "^3.0.1",
     "typescript": "^5.3.3"
   },
   "private": true
