--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BOOK_MOVIE-TICKETS-MTV",
+  "name": "book_movie-tickets-mtv",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -43,5 +43,9 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
