--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.2.2",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
