Update package.json to add expo-image-picker, msnodesqlv8, react-native-webview, and react-native-youtube-iframe dependencies

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -37,8 +39,9 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "undefined": "\\",
-    "expo-image-picker": "~16.0.6"
+    "react-native-webview": "^13.13.5",
+    "react-native-youtube-iframe": "^2.3.0",
+    "undefined": "\\"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
