--- a/fontend/package.json
+++ b/fontend/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.1",
@@ -34,6 +35,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.2.0",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
