--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.11.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
