--- a/fontend/package.json
+++ b/fontend/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.11.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
