--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
+    "node-cache": "^5.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
     "socket.io": "^4.8.1",
