--- a/fontend/package.json
+++ b/fontend/package.json
@@ -33,14 +33,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^8.2.0",
     "react-native-maps": "^1.20.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.14.0",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^6.11.0",
+    "react-native-video": "^6.12.0",
+    "react-native-vlc-media-player": "^1.0.82",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
