--- a/fontend/package.json
+++ b/fontend/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^7.2.2",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
     "expo-image-picker": "~16.0.6",
@@ -34,6 +35,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.2.0",
     "react-native-maps": "^1.18.0",
