--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,8 @@ DB_SERVER=localhost
 DB_DATABASE=MTB 67CS1
 DB_PORT=1433
 PORT=3000
+MOMO_PARTNER_CODE=
+MOMO_ACCESS_KEY=your_momo_access_key
+MOMO_SECRET_KEY=your_momo_secret_key
+EMAIL_USER=nhomdoan5lop67cs1@gmail.com
+EMAIL_PASSWORD=lfoxsvouoxklqacv
