--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hệ thống đặt ghế xem phim cần giải quyết các vấn đề quan trọng về đồng bộ hóa và trải nghiệm người dùng:\r - Đảm bảo không có hai người cùng đặt một ghế\r - Tạo trải nghiệm đặt vé mượt mà, thời gian thực\r - Cho phép người dùng \"giữ\" ghế trong thời gian thanh toán\r - Tự động giải phóng ghế không được thanh toán sau thời gian chờ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -24,6 +24,9 @@
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "node-cache": "^5.1.2",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^7.0.2",
+    "qrcode": "^1.5.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
     "redis": "^4.7.0",
