--- a/fontend/package.json
+++ b/fontend/package.json
@@ -11,10 +11,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.18",
@@ -24,37 +24,38 @@
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.38",
-    "expo-image-picker": "~16.0.6",
-    "expo-location": "~18.0.10",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.4",
+    "expo-status-bar": "~2.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-crypto": "^2.2.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-image-picker": "^8.2.0",
-    "react-native-maps": "^1.18.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.4.0",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
+    "socket.io-client": "^4.8.1",
     "undefined": "\\"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "nodemon": "^3.0.1",
     "typescript": "^5.3.3"
