--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,12 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
+    "moment-timezone": "^0.5.48",
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.2",
     "qrcode": "^1.5.4",
@@ -31,7 +34,8 @@
     "react-native-video": "^6.11.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
