--- a/fontend/package.json
+++ b/fontend/package.json
@@ -16,12 +16,14 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.2.2",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "expo": "^53.0.0",
@@ -30,18 +32,22 @@
     "expo-status-bar": "~2.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "msnodesqlv8": "^4.5.0",
     "mssql": "^11.0.1",
+    "netinfo": "^0.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.25.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.11.0",
     "react-native-web": "^0.20.0",
